@@ -1,5 +1,10 @@
 2021-03-10  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* utils/pk-strings.in: New file.
+	* utils/Makefile.am: Rules for pk-strings.
+
+2021-03-10  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-repl.c (banner): Avoid incomplete sentences in
 	translatable strings.
 
